--- a/src/app/layout/alert/alert.component.scss
+++ b/src/app/layout/alert/alert.component.scss
@@ -5,6 +5,7 @@
   line-height: 1.43;
   border-radius: 4px;
   letter-spacing: 0.01071em;
+  margin-bottom: 5px;
 
   &.hidden {
     display: none;
