--- a/src/styles.scss
+++ b/src/styles.scss
@@ -271,6 +271,20 @@ mat-paginator {
   border: 2px solid #ea6153;
 }
 
+.alert-gd-2 {
+  background-color: #ffffff;
+  border: 2px solid #cdcdcd;
+  color: #334254 !important;
+  box-shadow: 0px 0px 20px -10px #5353535e;
+
+  h1, h2, h3 {
+    margin-top: 0px; color: #18BC9C
+  }
+  p {
+    color: #334254 !important;
+  }
+}
+
 .entity-name {
   font-family: Montserrat, sans-serif !important;
   font-weight: 900 !important;
