--- a/src/app/shared/dialogs/index-members/index-members.component.html
+++ b/src/app/shared/dialogs/index-members/index-members.component.html
@@ -3,19 +3,19 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<a (click)="dialogRef.close()" class="close"></a>
-				<h2 class="gd-secondary">User list for index <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: middle;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
+				<h2 class="gd-secondary">User list for index <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
 
 				<div class="alert alert-gd-1">
-					<p *ngIf="!loading_users && !updating_roles">These users have access to your index. You can manage their access rights here.</p>
+					<h5 *ngIf="!loading_users && !updating_roles">These users have access to your index. You can manage their access rights here.</h5>
 
 					<mat-progress-bar *ngIf="loading_users || updating_roles" style="margin-top: 8px; z-index: 122222;" mode="indeterminate"></mat-progress-bar>
 
 					<app-alert type="error" title="Unable to update user" *ngIf="user_error!=''" [dismissible]="false">
-						<p>{{user_error}}</p>
+						<h4>{{user_error}}</h4>
 					</app-alert>
 
 					<app-alert type="success" title="User removed" *ngIf="user_removed!=''">
-						<p class="gd-secondary">User <span class="gd-primary">{{user_removed}}</span> has been removed from this index.</p>
+						<h4 class="gd-secondary">User <span class="gd-primary">{{user_removed}}</span> has been removed from this index.</h4>
 					</app-alert>
 
 					<div class="text-center" *ngIf="!loading_users">
@@ -23,10 +23,10 @@
 							<thead>
 							<tr>
 								<th scope="col" class="text-center">#</th>
-								<th scope="col" class="text-center" matTooltip="GrepoData user name">Username</th>
+								<th scope="col" class="text-center">GrepoData username</th>
 								<th scope="col" class="text-center" matTooltip="Remove a user to deny their read access on this index">Can read intel</th>
 								<th scope="col" class="text-center" matTooltip="These users can index new reports and add town notes">Can add intel</th>
-								<th scope="col" class="text-center" matTooltip="Index admins can manage other users and delete intel. They can also share the index with new users.">Can manage index settings</th>
+								<th scope="col" class="text-center" matTooltip="Index admins can change the index settings. They can also share the index with new users or remove users from the index.">Can manage index settings</th>
 								<th scope="col" class="text-center" matTooltip="Index owners have full control over the index and its settings.">Is index owner</th>
 								<th scope="col" class="text-center" matTooltip="When you remove a user, they will no longer be able to read the intel in this index">Remove user</th>
 							</tr>
